fix: App heading was overflowing container

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ nav h1 a {
   color: #fff;
   font-size: 14pt;
   font-weight: 200;
-  letter-spacing: 10px;
+  letter-spacing: 3px;
   text-transform: uppercase;
 }
 #breadcrumb {
